# arbitrage-trading-engine

./: .env.example  .gitignore  Cargo.toml  README.md  trades.db
src/: config.rs  discovery.rs  executor.rs  kalshi.rs  main.rs  metrics.rs  poly_sign.rs  polymarket.rs  scanner.rs  server.rs  types.rs
