[package]
name = "trading"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
dotenvy = "0.15"
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["json", "query"] }
chrono = { version = "0.4.45", features = ["serde"] }
